# cross-ai-core

./: .gitignore  AGENTS.md  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  README.md  RELEASE.md  REVIEW.md  pyproject.toml  pytest.ini
cross_ai_core/: __init__.py  ai_anthropic.py  ai_base.py  ai_error_handler.py  ai_gemini.py  ai_handler.py  ai_openai.py  ai_perplexity.py  ai_xai.py  aliases.py  discovery.py  recommendations.py
docs/: api-reference.md  providers.md
tests/: test_ai_base.py  test_ai_error_handler.py  test_ai_handler.py  test_aliases.py  test_discovery.py
